--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
-.App {
-  text-align: center;
+body {
+    /* background-image: url("../public/coronavirus.jpg"); */
+    
+   
+background-position:center center;
+
+
+background-repeat:no-repeat;
+
+background-attachment:fixed;
+
+
+background-size:cover;
+
+background-color: #464646;
+    
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.kuch {
+    font-family: 'Times New Roman', Times, serif;
+    color: #badc58;
+    margin-top: 20px;
+    margin-bottom: 30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.head {
+    font-family: 'Times New Roman', Times, serif;
+    animation: blinking 1.5s infinite;
+    margin-top: 10px;
+    font-size: 20px;
+}
+.A{
+    font-size: 30px;
+    font-weight: bolder;
+    font-family: 'Times New Roman', Times, serif;
+    color: white;
+    
+}
+.B{
+    font-size: 10px;
+    font-weight: bolder;
+    font-family: 'Times New Roman', Times, serif;
+    color: white;
+    
+}
+.card-color{
+    background-color:#686de0;
+}
+.MIN{
+    font-size: 40px;
+    font-weight: bolder;
+    color: white;
+    text-shadow: 2px 2px 8px #FF0000;
+}
+.mar{
+    margin-bottom: 20px;
+}
+.heig{
+    height: 202px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+@keyframes blinking {
+    0% {
+        color: red;
+    }
+
+    47% {
+        color: #000;
+    }
+
+    62% {
+        color: yellow;
+    }
+
+    97% {
+        color: transparent;
+    }
+
+    100% {
+        color: blue;
+    }
 }
